# uvpacker

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
example/cli-demo/: .gitignore  pyproject.toml
example/cli-demo/src/cli_demo/: __init__.py  main.py
example/qt-demo/: pyproject.toml
example/qt-demo/src/qt_demo/: main.py
example/web-demo/: .gitignore  pyproject.toml
example/web-demo/src/web_demo/: main.py
example/web-demo/src/web_demo/static/: app.js  style.css
example/web-demo/src/web_demo/templates/: index.html
src/uvpacker/: __init__.py  cli.py  core.py  errors.py  runtime.py  sources.py  ui.py  uvclient.py
src/uvpacker/app/: cli.py
src/uvpacker/app/commands/: build.py  cache.py
src/uvpacker/domain/: __init__.py  errors.py  models.py  rules.py  sources.py
src/uvpacker/infra/: cache_store.py  runtime_cache.py  runtime_client.py  runtime_downloader.py  uv_client.py  uv_compile.py
src/uvpacker/launcher/: README.md  __init__.py  _payload.py  launcher.c
src/uvpacker/services/: bytecode.py  launcher_build.py  package_tree.py  packer.py  payload_archive.py  project_config.py
src/uvpacker/view/: ui.py
tests/: test_build_command.py  test_cache.py  test_domain_rules.py  test_domain_sources.py  test_embedded_payload.py  test_errors.py  test_launcher.py  test_pack_init_warnings.py  test_packer_config.py  test_runtime_client.py  test_ui.py  test_uv_client.py
