[project]
name = "uvpacker"
version = "0.5.1"
description = "A Windows-oriented CLI packer for Python projects using uv and the Python Embedded Runtime."
readme = "README.md"
requires-python = "==3.12.*"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
uvpacker = "uvpacker:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=4.5.1",
]
