[project]
name = "web-demo"
version = "0.1.0"
description = "Example FastAPI web demo project for uvpacker."
requires-python = "==3.10.*"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
web-demo = "web_demo.main:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

